[package]
name = "jvm-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"  # 用于创建 HTTP 服务
prometheus = "0.13.4"
log = "0.4.22"
env_logger = "0.10"  # 用于日志记录
futures = "0.3"
clap = "3.0"
sysinfo = { version = "0.32.1", features = ["default", "disk", "network"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json"] }
regex = "1.5"